--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-python-telegram-bot[job-queue]>=21.3
-httpx>=0.27.0
-beautifulsoup4>=4.12.3
-lxml>=5.2.2
-psycopg2-binary>=2.9.9
-python-socketio[asyncio_client]>=5.11.1
-aiohttp>=3.9.5
+pip install -r python_requirements.txt
+python bot.py
